More formatting cleanup of book 2

--- a/4T/book2.tex
+++ b/4T/book2.tex
@@ -92,7 +92,6 @@
 %$\nsim$ Lackovich $\nsim$
 \newcommand{\jayaBrain}[2][]{{\color[RGB]{102,0,0}$\approx$#2$\approx$}}
 
-% $\Rightarrow$Carruthers$\Leftarrow$
 %\color[RGB]{230,145,56} %orig color
 \newcommand{\hayleyBrain}[2][]{{\color[RGB]{102,65,0}$\rightleftarrows$#2$\leftrightarrows$}}
 
@@ -102,6 +101,10 @@
 %$\supset$Signe$\subset$
 %\color[RGB]{60,120,216} % orig color
 \newcommand{\jonahBrain}[2][]{{\color[RGB]{29,57,102}$\Supset$#2$\Subset$}}
+
+%\color[RGB]{153,0,255} % orig color
+% Carruthers
+\newcommand{\carBrain}[2][]{{\color[RGB]{61,0,102}$\Rightarrow$#2$\Leftarrow$}}
 
 \renewcommand{\contentsname}{Session}
 \begin{document}
