--- a/4T/ch26.tex
+++ b/4T/ch26.tex
@@ -540,21 +540,21 @@ Swan looks a bit relieved. ``I'll inform Micah.''
 
 
 
-Jaya finds a private spot in a hallway in Medbay and looks around before thinking  {\color[RGB]{255,0,0}::Jonah::}  really hard.
+Jaya finds a private spot in a hallway in Medbay and looks around before thinking \jayaBrain{Jonah}  really hard.
 
- {\color[RGB]{0,0,255}::Chief?::}  responds Jonah.
+\jonahBrain{Chief?}  responds Jonah.
 
- {\color[RGB]{255,0,0}::Where are you?::} 
+\jayaBrain{Where are you?} 
 
- {\color[RGB]{0,0,255}::I'm not sure.::} 
+\jonahBrain{I'm not sure.} 
 
- {\color[RGB]{255,0,0}::Are you captured by the enemy?::} 
+\jayaBrain{Are you captured by the enemy?} 
 
- {\color[RGB]{0,0,255}::There isn't anyone...I don't know.....I can't find Oliver.::}  thinks Jonah, confusingly.
+\jonahBrain{There isn't anyone...I don't know.....I can't find Oliver.}  thinks Jonah, confusingly.
 
- {\color[RGB]{255,0,0}::I'm going to find Morgan:: } thinks Jaya.
+\jayaBrain{I'm going to find Morgan } thinks Jaya.
 
- {\color[RGB]{0,0,255}::Don't trust her.  It might not be her.::} 
+\jonahBrain{Don't trust her.  It might not be her.} 
 
 
 
@@ -585,7 +585,7 @@ Jaya goes to Engineering but can't bring herself to go into Trenton's lab.  She 
 
 \sceneHeadline{Hallway \& Bunk- Jaya and Jonah}
 
-Jaya goes into the hallway again and thinks  {\color[RGB]{255,0,0}::Jonah?::} 
+Jaya goes into the hallway again and thinks \jayaBrain{Jonah?} 
 
 The elevator doors open and Jonah steps out.
 
