--- a/4T/ch28.tex
+++ b/4T/ch28.tex
@@ -11,9 +11,7 @@
 A rather shocking lack of people getting punched in the face, even when well deserved.  And an even more shocking display of actual diplomatic maneuvering from all members of the team.
 
 
-
-\noindent\hrulefill
-
+\jumpHeadline{Terminus}
 
 
 
@@ -384,7 +382,7 @@ Hayley makes no move toward the paper.  She looks down at the orders and then ba
 
 Bennett turns to Jaya.  ``And you, are you going to sign the order?''
 
- {\color[RGB]{74,134,232}::He's bluffing:: } thinks Jonah at Jaya.
+\jonahBrain{He's bluffing} thinks Jonah at Jaya.
 
 ``I've just been promoted, sir and I have grown accustomed to getting a clear picture of what is going on and being informed and having a clear chain of command.  I strongly feel that this order should be cleared with my current commanding officer before moving forward.  I am not comfortable assuming that you have the authority to issue this order.  Could you maybe explain why this order is being made?'' says Jaya, stonewalling brilliantly.  Throughout this speech, Hayley is growing increasingly nervous as she eyes the guards surrounding them.
 
@@ -420,7 +418,7 @@ In the hallway, Jaya turns to Hayley and asks in a fierce whisper, ``What the fu
 
 ``That was clearly an agent of Octavius,'' whispers Hayley, still looking worried.  ``Sir, do we let them live?''
 
-Jaya broadcasts to Jonah  {\color[RGB]{255,0,0}::We were fucking set up!  He's already working for Octavius.  They tried to fire me!  What the fuck!!??::} 
+Jaya broadcasts to Jonah  \jayaBrain{We were fucking set up!  He's already working for Octavius.  They tried to fire me!  What the fuck!!??} 
 
 ``Is it okay to kill a Senator?'' Jaya asks Hayley.
 
@@ -592,7 +590,7 @@ Marechenko looks thoughtful again.  ``Tell me again about Nicklepan. There was n
 
 ``And no signs of Citizens either, correct?   Look, I like my house, but if I'm offered a much better house in a different area...''
 
- {\color[RGB]{255,0,0}::We were fucking set up!  He's already working for Octavius.  They tried to fire me!  What the fuck!!??::  } Jonah is distracted by Jaya's mental contact and spills his drink.
+\jayaBrain{We were fucking set up!  He's already working for Octavius.  They tried to fire me!  What the fuck!!??} Jonah is distracted by Jaya's mental contact and spills his drink.
 
 Marechenko asks if he's alright.
 
