--- a/4T/ch29.tex
+++ b/4T/ch29.tex
@@ -15,9 +15,7 @@ We meet the mysterious Agent Mohinder Lorentz!  Jonah decides to trust even more
 
 
 
-\noindent\hrulefill
-
-
+\jumpHeadline{Terminus}
 
 
 
@@ -339,7 +337,7 @@ Hayley coughs again, more loudly.  Jonah looks annoyed.
 
 ``Let's just talk then,'' says Jonah.
 
- {\color[RGB]{74,134,232}::We need to do things that the enemy would find difficult, like caring about an individual::}  thinks Jonah to Jaya.
+\jonahBrain{We need to do things that the enemy would find difficult, like caring about an individual}  thinks Jonah to Jaya.
 
 ``Well I'd like to haul Octavia out and shoot her in the head,'' says Jaya.  ``She killed Oliver.''
 
@@ -646,6 +644,7 @@ Jaya 0
 
 
 \jumpHeadline{Quotes: }
+
 \quotedDialog{
 Jaya: ``I hate Octavius.  They killed Oliver.''
 
@@ -659,20 +658,6 @@ Suko: ``Her ego precedes her down the hall.''
 Nate: ``Jaya is not one to let her ego get too far ahead of herself.''
 }
 
-\iffalse
-
-======================
-THESE ARE ERRORS ENCOUNTERED DURING THE EXPORT PROCESS
-======================
-
-	Unable to highlight for footnote: Note that this is the TA Agent HQ, not the TA HQ, which is a bit more decentralized or more accurately places as the Security Triumvirate. because:GivenExpectedTA Agent HQTA HQ
-
-	Unable to find a matching comment for footnote: _Marked as resolved_
-
-	Unable to find a matching comment for footnote: _Re-opened_
-
-
-\fi
 
 \vspace{\fill}
 
