--- a/4T/ch30.tex
+++ b/4T/ch30.tex
@@ -12,8 +12,7 @@ Big \underline{  {\color[RGB]{17,85,204}Badaboom}  }.  \hl{Temporary detour into
 
 
 
-\noindent\hrulefill
-
+\jumpHeadline{Unknown}
 
 
 
@@ -207,7 +206,7 @@ Back in the conference room, Jonah asks Lorentz if he has contact with the outsi
 
 
 
-Jaya and Vogel head down the street.  Jaya glories in feeling like part of an elite fighting squad.  One that she will soon be leading, of course. {[}\textit{Challenge 2: Notice.  Vigilant 3 (Jonah, through Jaya) → Overcome! }\textit{\textbf{2 VP (Jaya and Jonah)}}{]}.  Jaya and Jonah can see that the people standing in the streets are all Filis.  They are scared and it is taking a clear act of willpower to stay in place.  There's something \hl{Hayley-like}\footnote{\textbf{Nathaniel Ford }Strictly speaking, there is something Fili-like in the way Hayley follows orders, though she is perhaps an extreme case. \textsubscript{08/15/14 5:30am}}\footnote{$\rightarrow$\textbf{Suko T }''perhaps'' an extreme case?? :D \textsubscript{08/15/14 11:23am}} about them.   {\color[RGB]{74,134,232}::They're a distraction::}  Jonah thinks at Jaya.
+Jaya and Vogel head down the street.  Jaya glories in feeling like part of an elite fighting squad.  One that she will soon be leading, of course. {[}\textit{Challenge 2: Notice.  Vigilant 3 (Jonah, through Jaya) → Overcome! }\textit{\textbf{2 VP (Jaya and Jonah)}}{]}.  Jaya and Jonah can see that the people standing in the streets are all Filis.  They are scared and it is taking a clear act of willpower to stay in place.  There's something \hl{Hayley-like}\footnote{\textbf{Nathaniel Ford }Strictly speaking, there is something Fili-like in the way Hayley follows orders, though she is perhaps an extreme case. \textsubscript{08/15/14 5:30am}}\footnote{$\rightarrow$\textbf{Suko T }''perhaps'' an extreme case?? :D \textsubscript{08/15/14 11:23am}} about them.   \jonahBrain{They're a distraction}  Jonah thinks at Jaya.
 
 
 
@@ -574,25 +573,28 @@ Jonah gets back onboard and the train pulls out of Terminus Station.
 \end{itemize}
 
 
-\jumpHeadline{Accumulated Flaws over last four sessions in Terminus }
+\textbf{Accumulated Flaws over last four sessions in Terminus }
 
+{\parskip=0pt
  {\color[RGB]{255,0,0}Flaw 2: Trust Marechenko (Jonah)} 
 
  {\color[RGB]{255,0,0}Flaw 1: Injured right arm (Jaya)} 
 
  {\color[RGB]{255,0,0}Flaw 3: Rivalry with Malak (Jaya)} 
-
+}
 
 \jumpHeadline{VP Totals }
 
+{\parskip=0pt
 Hayley 0
 
 Jaya 6
 
 Jonah 2
-
+}
 
 \jumpHeadline{Quotes: }
+
 \quotedDialog{
 Jaya: We do have Trenton and he's good at these things even if he is an asshole.
 
