--- a/4T/ch31.tex
+++ b/4T/ch31.tex
@@ -20,16 +20,11 @@ Rook has ink.  OMG.
 
 
 
-\noindent\hrulefill
 
 
-
-
+\jumpHeadline{SAC-09}
 
 \textbf{{[}6-7 Tokens Backlash (or however the math works){]}}
-
-
-\sceneHeadline{SAC-09}
 
 Hayley asks Rook, ``Excuse me, what is a Praetor?''
 
@@ -821,9 +816,9 @@ Hayley hesitates then offers, ``If you would like, there's a place I go that mak
 
 ``I mean, I would rather be- I hope that I am dead before I lose them all.''
 
-REBECCAxxBEGINxxHIGHLIGHTxx``Maybe you \textit{are} crazy.  But look, don't die okay?''
+\hl{``Maybe you \textit{are} crazy.  But look, don't die okay?''
 
-``Okay,'' Hayley smiles, a genuine smile.  They part ways in the hallway.xxENDxxHIGHLIGHT\footnote{\textbf{q.google }I didn't think anyone was going to ever help Carruthers.  Even Rook and Swan didn't do it. \textsubscript{09/09/14 6:41pm}}\footnote{$\rightarrow$\textbf{Suko T }I think it's a sign of the mental ``health'' of SAC-09 that it was Hayley who reached out. :)  Though admittedly that was mostly me as player wanting to help out poor Carruthers. \textsubscript{09/23/14 1:57am}}
+``Okay,'' Hayley smiles, a genuine smile.  They part ways in the hallway.}\footnote{\textbf{q.google }I didn't think anyone was going to ever help Carruthers.  Even Rook and Swan didn't do it. \textsubscript{09/09/14 6:41pm}}\footnote{$\rightarrow$\textbf{Suko T }I think it's a sign of the mental ``health'' of SAC-09 that it was Hayley who reached out. :)  Though admittedly that was mostly me as player wanting to help out poor Carruthers. \textsubscript{09/23/14 1:57am}}
 
 
 
