--- a/4T/ch32.tex
+++ b/4T/ch32.tex
@@ -2,12 +2,7 @@
 \chapter{\textbf{``Shore Leave''} }
 
 
-
-
-\begin{center}
- {\LARGE \textbf{(aka ``Alacritous Response'')} } 
-\end{center}
-
+\subChapterTitle{``Alacritous Response''} 
 
 
 
@@ -23,16 +18,10 @@ Personal Backstory Trauma reared its ugly head for all three PCs.  Padme confron
 
 
 
-\noindent\hrulefill
-
-
-
+\jumpHeadline{SAC-09}
 
 
 \textbf{{[}3 Tokens in Pool from PC-initiated Scenes in previous session{]}}
-
-
-\sceneHeadline{SAC-09}
 
 The next morning, Jaya, Jonah and Hayley head to breakfast.  Javier and Carruthers are in the mess hall too.  Hayley smiles at Carruthers but Carruthers is lost in thought and Hayley leaves her alone.
 
@@ -180,13 +169,13 @@ Along the way, she quizzes him about what he saw during the attack on L.A. Ink. 
 
 ``Yeah I guess...They had your sister pinned against the wall- alive- and we walked in and they tried to kill us.  We backed out and there was a fire fight.  Well my part was a firefight, Douglas was less fire-y, more sword.''
 
-REBECCAxxBEGINxxHIGHLIGHTxx``He brought a fucking sword to a gunfight?'' says Jaya scornfully.
+\hl{``He brought a fucking sword to a gunfight?'' says Jaya scornfully.
 
 ``Guy's fast,'' says Jayce.
 
 ``Fucking weirdo.''
 
-``Says the girl with the arm.''xxENDxxHIGHLIGHT\footnote{\textbf{Suko T }\textless 3 \textsubscript{09/18/14 1:04am}}
+``Says the girl with the arm.''}\footnote{\textbf{Suko T }\textless 3 \textsubscript{09/18/14 1:04am}}
 
 ``Did you see any little ones?'' asks Jaya.``Kids?  I didn't see much of anything.  I literally walked in, they attacked us, I ducked, there was an explosion.  Douglas was shouting something, I don't know what.  When I came back in, the place was on fire and your sister was gone.  Two of them escaped out a back window and a third was already dead,'' says Jayce.
 
@@ -806,9 +795,9 @@ Out of earshot of their parents, Riva leans over to Jonah and says, ``Soooo... I
 
 ``So it's been less time that?  They seem very comfortable with each other.  Well... he seems comfortable with her.  She doesn't seem comfortable with anyone.''
 
-``REBECCAxxBEGINxxHIGHLIGHTxxHold your thoughts for when we get there.  Then tell me what you think when we arrive and I'll tell you what I think.''
+``\hl{Hold your thoughts for when we get there.  Then tell me what you think when we arrive and I'll tell you what I think.''
 
-``Alright,'' shrugs RivaxxENDxxHIGHLIGHT\footnote{\textbf{q.google }We should play that out at some point. \textsubscript{09/25/14 5:02pm}}.
+``Alright,'' shrugs Riva}\footnote{\textbf{q.google }We should play that out at some point. \textsubscript{09/25/14 5:02pm}}.
 
 
 
