--- a/4T/ch33.tex
+++ b/4T/ch33.tex
@@ -1,7 +1,7 @@
 \setcounter{chapter}{ 32 }
 \chapter{\textbf{``SAC-04'', part 1} }
 
-\subChapterTitle{``Grave Rot'')} 
+\subChapterTitle{``Grave Rot''} 
 
 \deets{Suko}{Sept 24th, 2014}
 
@@ -11,12 +11,7 @@ Another nightmare session for Jaya- no drugs, no sex, and having to be on the sa
 
 
 
-\noindent\hrulefill
-
-
-
-
-\sceneHeadline{SAC-09}
+\jumpHeadline{SAC-09}
 
 The train pulls into the SAC-09 station and there is a welcoming party.  Morgan is there in her usual BDU.  Hekate is there in her labcoat with Swan at her side.  Micah is in full battle uniform.  Karil is in the gun platform, looking a bit bored.  Carruthers is there too.
 
@@ -268,9 +263,9 @@ Hayley follows Jonah into the Bunk and sets her luggage down and shuts the door.
 
 ``So tomorrow?'' says Hayley doggedly.
 
-REBECCAxxBEGINxxHIGHLIGHTxx``Wow.  You really know how to make a girl feel good,'' says Jonah a little wryly.
+\hl{``Wow.  You really know how to make a girl feel good,'' says Jonah a little wryly.
 
-``Yes I do.  And men also,'' says Hayley, matter of factly.xxENDxxHIGHLIGHT\footnote{\textbf{Nathaniel Ford }Too good. I couldn't write this dialogue. \textsubscript{10/01/14 12:24am}}\footnote{$\rightarrow$\textbf{Suko T }Thank you!  I was rather proud of this one. \textsubscript{10/01/14 1:37am}}\footnote{$\rightarrow$\textbf{q.google }Ditto. \textsubscript{10/05/14 1:58pm}}
+``Yes I do.  And men also,'' says Hayley, matter of factly.}\footnote{\textbf{Nathaniel Ford }Too good. I couldn't write this dialogue. \textsubscript{10/01/14 12:24am}}\footnote{$\rightarrow$\textbf{Suko T }Thank you!  I was rather proud of this one. \textsubscript{10/01/14 1:37am}}\footnote{$\rightarrow$\textbf{q.google }Ditto. \textsubscript{10/05/14 1:58pm}}
 
 ``\hl{One day I'm going to understand}\footnote{\textbf{q.google }No, no you won't.  At least you'd better hope not. \textsubscript{10/05/14 1:59pm}} what in \hl{God's}\footnote{\textbf{q.google }What \_do\_ they say for this? \textsubscript{10/05/14 1:59pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }In the style of Urth of the New Sun, I assume that they have a phrase used for similar purposes and this is simply the closest translation our modern, English-speaking brains can understand. So we can ignore it. ;-) \textsubscript{10/05/14 3:37pm}} name they put you through there,'' says Jonah.  He says slowly, ``Where I grew up, it's usually the guys asking girls for kisses.''
 
@@ -599,9 +594,9 @@ Rook pauses and thinks for a moment.  ``I would attempt to make contact or to de
 
 ``It means we do not know who built SAC-04 and installed the Praetor or what their concerns were at that time.''
 
-REBECCAxxBEGINxxHIGHLIGHTxx``And they would still be around, after all that time?''
+\hl{``And they would still be around, after all that time?''
 
-``Yes,'' says Rook.xxENDxxHIGHLIGHT\footnote{\textbf{q.google }Jonah is now just a teeny bit \_freaked out\_ about Rook. \textsubscript{10/05/14 2:58pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }Aww. Rook is so adorable, though. It seems like just yesterday y'all were comparing him to Agent Coulson. \textsubscript{10/05/14 3:31pm}}\footnote{$\rightarrow$\textbf{Suko T }He's still adorable.  ETERNALLY adorable.  And even more like Agent Coulson (given the reveals in Marvel Agents of SHIELD) than we knew :D \textsubscript{10/05/14 5:12pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }I haven't actually been watching said show, so I don't really know. :P Should I? \textsubscript{10/05/14 6:08pm}}\footnote{$\rightarrow$\textbf{Suko T }If you're asking about watching it, probably not. It has some okay episodes but episodes 2-15 of first season are kinda...awful.  And I love superhero shows and am a shameless Clark Gregg fan so they really have to be pretty bad for me to say that.  The only episode I can endorse as genuinely good is the season 1 finale.  But there's some stuff they did with Coulson (to explain why he's still around after the Avengers movie) that echo in amusing ways with what I know/guess about Rook. \textsubscript{10/05/14 11:26pm}}
+``Yes,'' says Rook.}\footnote{\textbf{q.google }Jonah is now just a teeny bit \_freaked out\_ about Rook. \textsubscript{10/05/14 2:58pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }Aww. Rook is so adorable, though. It seems like just yesterday y'all were comparing him to Agent Coulson. \textsubscript{10/05/14 3:31pm}}\footnote{$\rightarrow$\textbf{Suko T }He's still adorable.  ETERNALLY adorable.  And even more like Agent Coulson (given the reveals in Marvel Agents of SHIELD) than we knew :D \textsubscript{10/05/14 5:12pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }I haven't actually been watching said show, so I don't really know. :P Should I? \textsubscript{10/05/14 6:08pm}}\footnote{$\rightarrow$\textbf{Suko T }If you're asking about watching it, probably not. It has some okay episodes but episodes 2-15 of first season are kinda...awful.  And I love superhero shows and am a shameless Clark Gregg fan so they really have to be pretty bad for me to say that.  The only episode I can endorse as genuinely good is the season 1 finale.  But there's some stuff they did with Coulson (to explain why he's still around after the Avengers movie) that echo in amusing ways with what I know/guess about Rook. \textsubscript{10/05/14 11:26pm}}
 
 ``Thank you.  How long do you think this will take?''
 
@@ -811,6 +806,7 @@ We are really geared up to the teeth this time around! \textsubscript{09/29/14 1
 
 \textit{Jaya}
 
+{\parskip=0pt
 Battle Dress Uniform 2
 
 Vacuum-sealed Infantry Light Combat Armor 3
@@ -830,11 +826,12 @@ Heads-up Display 4
 Letter of Marquee 2
 
 Forensics Bag 1
-
+}
 
 
 \textit{Jonah}
 
+{\parskip=0pt
 Battle Dress Uniform 2
 
 Vacuum-sealed Infantry Light Combat Armor 3
@@ -856,11 +853,12 @@ Heads-up Display 4
 Operator Integration 2
 
 Forensics Bag 1
-
+}
 
 
 \textit{Hayley}
 
+{\parskip=0pt
 Battle Dress Uniform 2
 
 Vacuum-sealed Infantry Light Combat Armor 3
@@ -876,7 +874,7 @@ HE Grenades 2
 Binoculars 2
 
 Heads-up Display 4
-
+}
 
 
 Morgan actually does a full inspection this time.  She gives everyone a few notes, ``fix this, tighten that.'' Even Hayley is not exempt, as \hl{Morgan has her adjust the fit of her weapon straps}\footnote{\textbf{Rebecca S. }I assume it's just that massive bosom of hers interfering with things again- that's why her straps are always wrong. Such a hinderance! \textsubscript{10/01/14 9:03am}}\footnote{$\rightarrow$\textbf{Suko T }Correct fit is so difficult when you can't see your feet.... \textsubscript{10/01/14 11:06am}}\footnote{$\rightarrow$\textbf{q.google }http://en.wikipedia.org/wiki/Amazons\#Etymology \textsubscript{10/05/14 3:13pm}}, though Morgan compliments her on the cleanliness of her rifle.  She tells Jonah to clean his weapons better.   Morgan addresses Jaya, ``Do you feel capable of taking command?''
@@ -976,11 +974,11 @@ Rust says, ``Fodder,'' and watches Jaya's reaction.  She doesn't seem to be twit
 
 Hayley continues through the train, introducing herself to all of Drake's team as well.  
 
- {\color[RGB]{74,134,232}::I need to tell you something in private.  Hold still and listen.  I was told to ask you if I need to administer any kind of first aid.  I assume you'll let me know.  Okay?  Nod if you understand and I won't have to ask you in front of all these damn people.::} 
+\jonahBrain{I need to tell you something in private.  Hold still and listen.  I was told to ask you if I need to administer any kind of first aid.  I assume you'll let me know.  Okay?  Nod if you understand and I won't have to ask you in front of all these damn people.} 
 
 Jaya just keeps scratching a scab on her cheek and looks out the window, giving no indication she even heard Jonah's thoughts.  
 
- {\color[RGB]{74,134,232}::Alright, so be it.::   } 
+\jonahBrain{Alright, so be it.} 
 
 Jayce goes to sleep.  Jonah clarifies with Hayley that she needs to protect Douglas and Jayce over everyone else.  Some time passes.  Drake makes small talk with Hayley about guns and knives.  Hayley is very interested and sits as close to him as possible without violating any social protocol rules.
 
@@ -989,8 +987,9 @@ Jayce goes to sleep.  Jonah clarifies with Hayley that she needs to protect Doug
 
 \sceneHeadline{SAC-04- The Mount of the Old Man}
 
-\jumpHeadline{THE CARDS }
+\textbf{THE CARDS }
 
+{\parskip=0pt
 The Omen- Green
 
 Children of the Corn- Green
@@ -1002,7 +1001,7 @@ Poltergeist- Red
 Let the Right One In- Red
 
 Misery- Orange
-
+}
 
 
 Jaya stands at the door, Hayley positions herself to step out first in front of Jaya.  The doors open and a wave of cool wet air rushes in.  The air is damper than we've ever felt.  Once we're on the small train platform we are greeted by a sight we have never seen before.  Everything is green.  Vegetation is everywhere, there's even moss and other greenery on the platform itself.  Jaya draws her gun, Jonah drops to one knee defensively.  Hayley continues to move forward in a defensive posture.
@@ -1225,12 +1224,13 @@ When Hayley reaches the far side of the bridge, the guy screams and in the dista
 
 \jumpHeadline{VP Totals }
 
+{\parskip=0pt
 \hl{Hayley 3}\footnote{\textbf{Rebecca S. }high five! \textsubscript{10/01/14 9:19am}}
 
 Jaya 0
 
 Jonah 0
-
+}
 
 
 
