--- a/4T/ch34.tex
+++ b/4T/ch34.tex
@@ -10,19 +10,12 @@
 Lost some redshirts already.  Not looking good for having any left by the end of the mission. \hl{Crossed the river, hiked up a mountain}\footnote{\textbf{Nathaniel Ford }''Patrol Group One Goes For A Nice Hike'' would be an appropriate name for this session. \textsubscript{10/10/14 12:51pm}}\footnote{$\rightarrow$\textbf{Suko T }+1 \textsubscript{10/10/14 2:26pm}} chased by (allegedly) deadly mist.  There were tears.  And vomiting.  And creeeeepy people.  And a giant pile of bones. 
 
 
-
-\noindent\hrulefill
-
-
-
-
-
-Our gear:
-
+\jumpHeadline{Our gear:}
 
 
 \textit{Jaya}
 
+{\parskip=0pt
 Battle Dress Uniform 2
 
 Vacuum-sealed Infantry Light Combat Armor 3 (with one arm modified to accommodate her awesome mechanical arm)
@@ -42,11 +35,12 @@ Heads-up Display 4
 Letter of Marque 2
 
 Forensics Bag 1
-
+}
 
 
 \textit{Jonah}
 
+{\parskip=0pt
 Battle Dress Uniform 2
 
 Vacuum-sealed Infantry Light Combat Armor 3
@@ -68,11 +62,12 @@ Heads-up Display 4
 Operator Integration 2
 
 Forensics Bag 1
-
+}
 
 
 \textit{Hayley}
 
+{\parskip=0pt
 Battle Dress Uniform 2
 
 Vacuum-sealed Infantry Light Combat Armor 3
@@ -88,10 +83,11 @@ HE Grenades 2
 Binoculars 2
 
 Heads-up Display 4
-
+}
 
 \jumpHeadline{THE CARDS }
 
+{\parskip=0pt
 \hl{The Omen- Green (triggered)}\footnote{\textbf{Rebecca S. }Ugh, so depressing to remember/realize that we've only triggered greens so far. \textsubscript{10/10/14 7:09pm}}
 
 Children of the Corn- Green
@@ -103,9 +99,9 @@ Poltergeist- Red
 Let the Right One In- Red
 
 Misery- Orange
+}
 
-
-\sceneHeadline{The River}
+\jumpHeadline{The River}
 
 \textbf{{[}14 Tokens in the pool{]}}
 
@@ -509,9 +505,9 @@ Hayley looks puzzled, ``Not that I'm aware of.''
 
 Hayley whispers softly, ``Sorry Sir, I just wanted to inform you that I may be dishonorably discharged after I assault a superior officer under orders.''
 
-REBECCAxxBEGINxxHIGHLIGHTxx``Do not assault-  Do not assault an officer.  Orders.  That's orders.  What time is it?'' asks Jaya.
+\hl{``Do not assault-  Do not assault an officer.  Orders.  That's orders.  What time is it?'' asks Jaya.
 
-Hayley says ``Thank you'' and reports the time.xxENDxxHIGHLIGHT\footnote{\textbf{Nathaniel Ford }This is such an interesting manipulation of the system. And by the system I'm not sure where 'TA Handbook' ends and 'Hayley' begins. \textsubscript{10/12/14 12:47pm}}\footnote{$\rightarrow$\textbf{Suko T }LOL!  I was wondering if Rust would call Hayley on it, since it was a pretty weak evasion (though she was loopy from altitude sickness so creativity was not going to be her strong suit).  But yes, Hayley totally cherry picks the TA Handbook bits that she wants to ``apply''. :)  She's learning to bend system to get what she wants.  Politely, of course!  She's already tested this out by going around Dr. G and Rook by using Swan and Larissa respectively.  
+Hayley says ``Thank you'' and reports the time.}\footnote{\textbf{Nathaniel Ford }This is such an interesting manipulation of the system. And by the system I'm not sure where `TA Handbook' ends and `Hayley' begins. \textsubscript{10/12/14 12:47pm}}\footnote{$\rightarrow$\textbf{Suko T }LOL!  I was wondering if Rust would call Hayley on it, since it was a pretty weak evasion (though she was loopy from altitude sickness so creativity was not going to be her strong suit).  But yes, Hayley totally cherry picks the TA Handbook bits that she wants to ``apply''. :)  She's learning to bend system to get what she wants.  Politely, of course!  She's already tested this out by going around Dr. G and Rook by using Swan and Larissa respectively.  
 
 If Jaya didn't wake up (or Rust pointed out the chain of command issues) I had some other backup plans, so Hayley would have tried something else. \textsubscript{10/12/14 10:42pm}}  There's a sound of velcro ripping as Jaya opens the satchel and pulls out the syringe that Morgan gave her and injects it into her thigh. 
 
@@ -606,9 +602,9 @@ Jaya feels like the faceless moon is watching her.  If she doesn't look at it st
 
 ``Moon is kinda fucking hostile,'' says Jaya.
 
-REBECCAxxBEGINxxHIGHLIGHTxxLackovich says to Drake, ``She's fucking with you.'' and walks up to Jaya.  When she's close to Jaya she says under her breath, ``Put. The.  Fucking.  Gun.  Away.  Making us look bad.''
+\hl{Lackovich says to Drake, ``She's fucking with you.'' and walks up to Jaya.  When she's close to Jaya she says under her breath, ``Put. The.  Fucking.  Gun.  Away.  Making us look bad.''
 
-``Ha!  Don't you know a- a fucking joke?  Ha!  Fucking moon...'' says Jaya loudly and unconvincingly, and puts her gun away.xxENDxxHIGHLIGHT\footnote{\textbf{Suko T }hee! \textsubscript{10/10/14 12:12pm}}
+``Ha!  Don't you know a- a fucking joke?  Ha!  Fucking moon...'' says Jaya loudly and unconvincingly, and puts her gun away.}\footnote{\textbf{Suko T }hee! \textsubscript{10/10/14 12:12pm}}
 
 Rust puts his gun away.  Drake glares at Jaya.
 
@@ -949,6 +945,7 @@ And somewhere in the streets, there comes the strangled gurgling cry of someone 
 
 \jumpHeadline{Dead Red Shirts: }
 
+{\parskip=0pt
 Carlos
 
 Naveen
@@ -956,16 +953,17 @@ Naveen
 Zengada
 
 Morley
-
+}
 
 \jumpHeadline{VP Totals }
 
+{\parskip=0pt
 Hayley 2
 
 Jaya 0
 
 Jonah 4
-
+}
 
 \jumpHeadline{Quotes: }
 
