--- a/4T/ch35.tex
+++ b/4T/ch35.tex
@@ -1,24 +1,13 @@
 \setcounter{chapter}{ 34 }
-\chapter{\textbf{``SAC-04''} }
+\chapter{\textbf{``SAC-04'', part 3} }
+
+
+\subChapterTitle{ ``Jaya vs. the Kabuki Zombie''}
 
 
 
 
-\begin{center}
- {\LARGE \textbf{(part 3)} } 
-\end{center}
-
-
-\begin{center}
- {\LARGE \textbf{(aka. ``Jaya vs. the Kabuki Zombie'')} } 
-\end{center}
-
-
-
-
-\textit{Notes:} Suko
-
-\textit{Date:} Oct 22nd, 2014
+\deets{Suko}{Oct 22nd, 2014}
 
 
 
@@ -38,16 +27,11 @@ Once again I color coded the Operator/Agent thoughts.
 
 
 
-\noindent\hrulefill
-
-
+\jumpHeadline{The Village}
 
 
 
 \textbf{{[}6 Tokens in the pool{]}}
-
-
-\sceneHeadline{The Village}
 
 {[}\textit{Challenge 1: Notice.  Thrown back}{]} Jaya, Jonah, Lackovich, Javier, and Breccan hear the scream but can't tell where it's coming from.  It could be coming from where they think Drake's group is, or it could be coming from in front of them... none of them are sure.  The little girl keeps bouncing the ball against the wall.  Javier staggers to one knee and drops his rifle.  He seems unsteady.  Faintly in the distance they hear Hayley yell Jonah's name.
 
@@ -369,21 +353,21 @@ Jonah takes a deep breath and says over the radio over the general frequency, ``
 
 
 
- {\color[RGB]{153,0,255}::Report in.::}  {\color[RGB]{147,196,125} } says Carruthers in Hayley's head.
+\carBrain{Report in.} says Carruthers in Hayley's head.
 
 Hayley is confused at first, looking around for Carruthers and then says softly (but aloud), ``Hello?  Operator Carruthers?''
 
- {\color[RGB]{153,0,255}::Agent:: } says Carruthers.
+\carBrain{Agent } says Carruthers.
 
 ``Hi!'' says Hayley cheerfully, outloud (albeit quietly).
 
- {\color[RGB]{153,0,255}::Hi.  Agent Morgan wants to know what is happening:: } Carruthers feels much more ``distant'' than Oliver did.  It is harder to ``hear'' her.
+\carBrain{Hi.  Agent Morgan wants to know what is happening} Carruthers feels much more ``distant'' than Oliver did.  It is harder to ``hear'' her.
 
-Hayley switches to speaking just in her head   {\color[RGB]{230,145,56}::Apparently Agent Parvadi has subdued a hostile.  They are being approached by others who do not seem as hostile.  Agent Rust's team has lost one member, Constable Carlos.  Agent Drake's team has lost two members, Constables Naveen and Zengada.  Operator Lackovich has lost one member, Constable Morley.  Constable Das is not doing well and almost dead.  Patrol Groups 1 and 2 are together, but not with me.  I have been requisitioned to Agent Malak's team and assigned to help guard the Assets.  Agent Malak and Agent Rust's teams are nearby, Agent Rust's team just rejoined us.  We are holding our position, looking for enemy combatants and protecting the Assets.::} 
+Hayley switches to speaking just in her head  \hayleyBrain{Apparently Agent Parvadi has subdued a hostile.  They are being approached by others who do not seem as hostile.  Agent Rust's team has lost one member, Constable Carlos.  Agent Drake's team has lost two members, Constables Naveen and Zengada.  Operator Lackovich has lost one member, Constable Morley.  Constable Das is not doing well and almost dead.  Patrol Groups 1 and 2 are together, but not with me.  I have been requisitioned to Agent Malak's team and assigned to help guard the Assets.  Agent Malak and Agent Rust's teams are nearby, Agent Rust's team just rejoined us.  We are holding our position, looking for enemy combatants and protecting the Assets.} 
 
-Hayley gets the faintest impression of a nod.  {\color[RGB]{153,0,255} ::Is Javier okay?::} 
+Hayley gets the faintest impression of a nod.  \carBrain{Is Javier okay?} 
 
-Hayley frowns a little in thought and Carruthers can tell Hayley's thinking through all the Constables to remember which one is Javier.   {\color[RGB]{230,145,56}::I have not seen him, but they haven't reported any injuries to their squad yet.::  } 
+Hayley frowns a little in thought and Carruthers can tell Hayley's thinking through all the Constables to remember which one is Javier.   \hayleyBrain{I have not seen him, but they haven't reported any injuries to their squad yet.} 
 
 There is no verbal response but a strong sense of disappointment from Carruthers.
 
@@ -459,17 +443,17 @@ Jonah is worried about the constant rain, ``We need to get her out the rain.  If
 
 Hayley helps Javier navigate the slippery roof.  She feels really good about helping him.  He seems distracted, not feeling very well.  Hayley asks if he's okay with uncharacteristically sincere concern.  There's a distant wave of relief from Carruthers and a feeling of anxiety/guilt.
 
-This puzzles Hayley so she asks, discreetly,  {\color[RGB]{230,145,56}::Did something go wrong?::}  {\color[RGB]{255,153,0} } 
+This puzzles Hayley so she asks, discreetly,  \hayleyBrain{Did something go wrong?}  {\color[RGB]{255,153,0} } 
 
- {\color[RGB]{153,0,255}::Victor says there was a...feedback loop.  Because both of us were there.:: } 
+\carBrain{Victor says there was a...feedback loop.  Because both of us were there. } 
 
-Hayley gets a image flash of Transit Minor from Carruthers and shakes her head.   {\color[RGB]{230,145,56}::Oh.  I don't understand that but I will think about it later. Thank you for the information.::}  {\color[RGB]{255,153,0} } 
+Hayley gets a image flash of Transit Minor from Carruthers and shakes her head.   \hayleyBrain{Oh.  I don't understand that but I will think about it later. Thank you for the information.}  {\color[RGB]{255,153,0} } 
 
- {\color[RGB]{153,0,255}::Morgan is glad the situation is secure.:: } 
+\carBrain{Morgan is glad the situation is secure. } 
 
- {\color[RGB]{230,145,56}::Should I tell people that I'm talking to you?::}  {\color[RGB]{255,153,0} } 
+ \hayleyBrain{Should I tell people that I'm talking to you?}  {\color[RGB]{255,153,0} } 
 
- {\color[RGB]{153,0,255}::Uh...maybe not Drake.  I mean, I think you should just tell our commanding officer.:: } 
+\carBrain{Uh...maybe not Drake.  I mean, I think you should just tell our commanding officer. } 
 
 
 
@@ -569,9 +553,9 @@ Not having any immediate orders for her position in the formation, Hayley drops 
 
 Jaya has a look of fear in her eyes as she leans away from Hayley and sputters a bit. ``Wait.  Uhhhhhh.  Ffffff.....What?  Uh.....''
 
- {\color[RGB]{153,0,255}::Fascinating.:: } 
+\carBrain{Fascinating. } 
 
- {\color[RGB]{230,145,56}::She does that sometimes.::}  {\color[RGB]{255,153,0} } 
+ \hayleyBrain{She does that sometimes.}  {\color[RGB]{255,153,0} } 
 
 Jonah tells Jaya, ``You should tell her about what you were fighting. They might know what it is.''
 
@@ -599,7 +583,7 @@ Hayley glances over at Javier but he seems to be doing much better and is keepin
 
 ``Not that I'm aware of, Sir,'' says Hayley.  \hl{In her head, Carruthers is laughing.  Hayley is startled into laughing a bit too.}\footnote{\textbf{Rebecca S. }No! No! Resist the corrupting influence of Carruthers! \textsubscript{11/02/14 1:02am}}
 
-``Voices in your head, talking to you,'' says Jonah quietly to Jaya.   {\color[RGB]{74,134,232}::Like this.::  } ``\textit{Carruthers. } Not Morgan,'' stresses Jonah.
+``Voices in your head, talking to you,'' says Jonah quietly to Jaya.   \jonahBrain{Like this. } ``\textit{Carruthers. } Not Morgan,'' stresses Jonah.
 
 Jaya grumbles, not happy, but she ends up describing the creature in colorful terms, punctuated by many swear words.  She of course frames everything to make herself look great.  She includes the description of the head slithering off. 
 
@@ -609,13 +593,13 @@ Jaya turns to Jonah, ``What the FUCK?  Keep that shit away from me.''
 
 ``Is there anything else you want to report, Sir?'' Hayley asks Jaya.
 
- {\color[RGB]{153,0,255}::Rook wants me to confirm that it is white and slightly corrosive?:: } 
+\carBrain{Rook wants me to confirm that it is white and slightly corrosive? } 
 
 ``Uh, Agent Rook wants me to confirm that it is white and....corrosive?'' asks Hayley uncertainly.
 
 Jonah holds up the jar so Hayley can see it and says, ``it is VERY corrosive.  And animate.''
 
- {\color[RGB]{153,0,255}::Please hold on a moment, they are conferring.::} 
+\carBrain{Please hold on a moment, they are conferring.} 
 
 ``Oh and show them these,'' says Jonah and holds up the black jagged things.
 
@@ -623,31 +607,31 @@ Jonah holds up the jar so Hayley can see it and says, ``it is VERY corrosive.  A
 
 ``That's what got me there and there...'' Jaya points to the gashes and holes in her former armor.  Hayley makes sure to look at the damage so Carruthers can see it.
 
- {\color[RGB]{153,0,255}::Rook says that is probably obsidian and this is strange because that Praetor shouldn't be here.::} 
+\carBrain{Rook says that is probably obsidian and this is strange because that Praetor shouldn't be here.} 
 
- {\color[RGB]{230,145,56}::He is referring to the white stuff or the black things?::}  {\color[RGB]{255,153,0} } 
+ \hayleyBrain{He is referring to the white stuff or the black things?}  {\color[RGB]{255,153,0} } 
 
- {\color[RGB]{153,0,255}::The black things.::} 
+\carBrain{The black things.} 
 
 ``Agent Rook says that the black things are probably obsidian. And that it is strange because that Praetor isn't supposed to be here.''
 
- {\color[RGB]{230,145,56}::Does this mean there are two?::}  {\color[RGB]{255,153,0} } 
+ \hayleyBrain{Does this mean there are two?}  {\color[RGB]{255,153,0} } 
 
 ``We are so fucking fucked!!  Do we abort the mission?'' asks Jaya.
 
- {\color[RGB]{153,0,255}::I'm not going to ask that question, I'm pretty sure Morgan wants you to do the mission.::} 
+\carBrain{I'm not going to ask that question, I'm pretty sure Morgan wants you to do the mission.} 
 
 ``Agent Morgan would like us to continue,'' says Hayley.
 
 ``Agent Morgan can go-'' Jaya bites back the rest of her sentence with a frustrated noise.
 
- {\color[RGB]{153,0,255}::Should I tell Agent Morgan that?::} 
+\carBrain{Should I tell Agent Morgan that?} 
 
- {\color[RGB]{230,145,56}\hl{::Uh, she didn't finish the sentence, so I don't know what you would tell her.::}  {\color[RGB]{255,153,0}  } Hayley feels confused and is reviewing the last few sentences in her head to figure out what she missed. {\color[RGB]{255,153,0}.}} \footnote{\textbf{Rebecca S. }Once again, Hayley being the best \textsubscript{11/02/14 1:03am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }THE BEST. \textsubscript{11/02/14 1:37am}}
+\hayleyBrain{\hl{Uh, she didn't finish the sentence, so I don't know what you would tell her.}}\hl{  Hayley feels confused and is reviewing the last few sentences in her head to figure out what she missed.} \footnote{\textbf{Rebecca S. }Once again, Hayley being the best \textsubscript{11/02/14 1:03am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }THE BEST. \textsubscript{11/02/14 1:37am}}
 
 ``Ask them how is this other Praetor different?'' says Jonah.
 
- {\color[RGB]{153,0,255}::That Praetor is supposed to be at the Canal.  SAC-08.::} 
+\carBrain{That Praetor is supposed to be at the Canal.  SAC-08.} 
 
 ``This one is supposed to be at the Canal.  SAC-08,'' says Hayley.
 
@@ -655,15 +639,15 @@ Jonah holds up the jar so Hayley can see it and says, ``it is VERY corrosive.  A
 
 There is some muddled confused mental conversation between Hayley and Carruthers but eventually they straighten out which Praetor they are talking about and what info is needed.
 
- {\color[RGB]{153,0,255}::He's uncertain, because based on descriptions of its current activities thus far, it seems idiosyncratic with his experience.  He apologizes that he can't give a better description but he thinks this one is much less...mercantile than he's familiar with.::} 
+\carBrain{He's uncertain, because based on descriptions of its current activities thus far, it seems idiosyncratic with his experience.  He apologizes that he can't give a better description but he thinks this one is much less...mercantile than he's familiar with.} 
 
 ``Agent Rook says this one is behaving...um...idi-'' Hayley fumbles over the unfamiliar word.
 
- {\color[RGB]{153,0,255}::idiosyncratic::} 
+\carBrain{idiosyncratic} 
 
 ``-idiosyncratic.  I don't know what that word means but maybe you do.  And it is less mercantile than he's...used to?'' Hayley says uncertainly.
 
- {\color[RGB]{153,0,255}::would expect::} 
+\carBrain{would expect} 
 
 ``-would expect.'' Hayley repeats firmly.
 
@@ -675,7 +659,7 @@ Hayley whispers to Jaya, ``Sir, do recall that they can hear everything that I c
 
 Jaya turns pale.
 
- {\color[RGB]{153,0,255}::I won't tell that to Morgan.  You can tell her that.  She can owe me a favor.::} 
+\carBrain{I won't tell that to Morgan.  You can tell her that.  She can owe me a favor.} 
 
 Hayley says softly to Jaya, ``Operator Carruthers says she won't report that.''  Jaya breathes a sigh of relief and starts to smile, but Hayley continues, ``And you will owe her a favor.''
 
@@ -685,9 +669,9 @@ Jaya glares.  Hayley feels a wave of anxiety from Carruthers.
 
 Hayley nods briskly and rejoins Drake's Squad.
 
- {\color[RGB]{230,145,56}::I think that went well!::}  {\color[RGB]{255,153,0}  } Hayley thinks cheerfully.  Carruthers gets the impression that Hayley's not telling Carruthers so much as patting herself on the back for doing something that didn't appear to end in disaster.
+ \hayleyBrain{I think that went well!}  {\color[RGB]{255,153,0}  } Hayley thinks cheerfully.  Carruthers gets the impression that Hayley's not telling Carruthers so much as patting herself on the back for doing something that didn't appear to end in disaster.
 
- {\color[RGB]{153,0,255}::I think you might be wrong.::} 
+\carBrain{I think you might be wrong.} 
 
 Hayley feels disappointed.  Clearly she missed something somewhere, but she has no idea what.
 
@@ -699,7 +683,7 @@ The rain is soaking everything.  We have water in our boots.  We get the feeling
 
 ``Why is there so much rain here? How has everything not been destroyed already by it?'' complains Jonah.
 
- {\color[RGB]{153,0,255}::Rook believes that's unlikely, given the Praetor.  Praetors wouldn't allow their SACs to be destroyed.::} 
+\carBrain{Rook believes that's unlikely, given the Praetor.  Praetors wouldn't allow their SACs to be destroyed.} 
 
 Hayley says quietly over the Hush Radio to Jaya and Jonah, ``Agent Rook is fairly certain this rain won't destroy.  Praetors wouldn't let something like that destroy their.... place?  Area...?  I think?''
 
@@ -1003,6 +987,7 @@ It would be awesome if the lady (the one Victor has a crush on!) is the SAC-01 P
 
 \textit{Jaya}
 
+{\parskip=0pt
 Battle Dress Uniform 2
 
 Vacuum-sealed Infantry Light Combat Armor 3 (from Hayley)
@@ -1022,11 +1007,12 @@ Heads-up Display 4
 Letter of Marque 2
 
 Forensics Bag 1
-
+}
 
 
 \textit{Jonah}
 
+{\parskip=0pt
 Battle Dress Uniform 2
 
 Vacuum-sealed Infantry Light Combat Armor 3
@@ -1050,11 +1036,12 @@ Heads-up Display 4
 Operator Integration 2
 
 Forensics Bag 1
-
+}
 
 
 \textit{Hayley}
 
+{\parskip=0pt
 Battle Dress Uniform 2
 
 \sout{ Vacuum-sealed Infantry Light Combat Armor 0 } (Jaya's messed up armor)
@@ -1070,7 +1057,7 @@ HE Grenades 2
 Binoculars 2
 
 Heads-up Display 4
-
+}
 
 \jumpHeadline{THE CARDS }
 
@@ -1094,53 +1081,56 @@ Misery- Orange
 
 \jumpHeadline{Dead Red Shirts }
 
+{\parskip=0pt
 Rust's team: Carlos, Das
 
 Drake's team: Naveen, Zengada
 
 PG2: Morley
-
+}
 
 \jumpHeadline{Live Red Shirts }
 
+{\parskip=0pt
 Rust's team: Grabber, Misha, Arjoon
 
 Drake's team: Takashiri, Madelyn, Pipes 
 
 PG2: Breccan
-
+}
 
 \jumpHeadline{VP Totals }
 
+{\parskip=0pt
 Hayley 1
 
 Jaya \hl{7}\footnote{\textbf{Suko T }Woo hoo!!!  High five! \textsubscript{10/23/14 5:59pm}}
 
 Jonah 4
-
+}
 
 \jumpHeadline{Quotes: }
 
-Rebecca: I pull out my gun and shoot the Darkness.
+I pull out my gun and shoot the Darkness.
+\extraIndent{Rebecca}
 
-
-
+\quotedDialog{
 Nate: For Hayley, dead people rank lower than ugly people
 
-Suko: Only sometimes.
+Suko: Only sometimes.\\[4mm]
+}
 
-
-
+\quotedDialog{
 Hayley: I think that went well!
 
 Carruthers: I think you might be wrong.
+}
 
 
+Question is, would I send in Hayley?  I just took all her armor...
+\extraIndent{Rebecca}
 
-Rebecca: Question is, would I send in Hayley?  I just took all her armor...
-
-
-
+\quotedDialog{
 Rebecca (to Ion): Good thing you brought your sister into the base, now you can just roll up her character when you die.
 
 Ion: All I can say is that if I go down, I'm going to blast everything he actually thinks about Jaya into her psyche.
@@ -1155,8 +1145,8 @@ Ion (to Suko): That's not how it works.  \textit{You} lost an Operator.  You kno
 
 Suko: But Hayley be \textit{crazy}.
 
-Ion: So will Jaya be when we're done with this. 
-
+Ion: So will Jaya be when we're done with this. \\[4mm]
+}
 
 
 Rebecca: We just put all the boys in the meatgrinder.
