--- a/4T/ch36.tex
+++ b/4T/ch36.tex
@@ -2,7 +2,7 @@
 \chapter{\textbf{``SAC-04'', part 4} }
 
 
-\subChapterTitle{ ``Code Gold'')}
+\subChapterTitle{ ``Code Gold''}
 
 \deets{Suko}{Nov 12th, 2014}
 
@@ -14,26 +14,21 @@ Drake becomes Praetor of SAC-04 (but Jaya and Hayley don't know that yet).  Jona
 
 Once again I color coded the Operator/Agent thoughts.
 
- {\color[RGB]{74,134,232}Jonah to Jaya} 
+\jonahBrain{Jonah to Jaya} 
 
- {\color[RGB]{255,0,0}Jaya to Jonah} 
+\jayaBrain{Jaya to Jonah} 
 
- {\color[RGB]{230,145,56}Hayley to Carruthers} 
+\hayleyBrain{Hayley to Carruthers} 
 
- {\color[RGB]{153,0,255}Carruthers to Hayley}  {\color[RGB]{153,0,255} } 
-
-
-
-\noindent\hrulefill
+\carBrain{Carruthers to Hayley} 
 
 
+\jumpHeadline{SAC-04}
 
 
 
 \textbf{{[}28 Tokens in the pool{]}}
 
-
-\sceneHeadline{SAC-04}
 
 Jonah is still looking into the glassed in room with the tanks.  There is some writing in one corner that he can't read.  He asks Jayce to ask Douglas if he can read what it says.  Douglas is looking down the corridor and Drake is looking in multiple directions at once (but in a manly way).  Seeing them being so vigilant and on alert, Jonah relaxes, feeling like someone finally has his back for the first time. Jayce catches Douglas' attention and Douglas signs back, somewhat offhand.
 
@@ -152,7 +147,7 @@ Back at the building Hayley staggers to her feet, mostly unharmed but a little b
 
 
 
-Lackovich is perched precariously on the wall and is attempting to provide cover for Hayley and Javier.  Carruthers is chirping to Hayley from very far away  {\color[RGB]{153,0,255}::Are you okay?? You need to wake up now!::} 
+Lackovich is perched precariously on the wall and is attempting to provide cover for Hayley and Javier.  Carruthers is chirping to Hayley from very far away  \carBrain{Are you okay?? You need to wake up now!} 
 
 Hayley cradles her rifle and says (to Carruthers as much as Lackovich and Javier) ``I just needed to catch my breath.  Let's move.''
 
@@ -212,9 +207,9 @@ Jaya keeps her newly acquired gun low, but presses it up against Rust's sternum 
 
 Hayley has climbed out of the rubble and sees two uniformed figures in a strange standoff.  She can tell it's Jaya and Rust.  Jaya's pointing a gun at Rust and Rust has his hand near her throat.
 
- {\color[RGB]{153,0,255}::They're asking for a status report::} 
+ \carBrain{They're asking for a status report} 
 
- {\color[RGB]{230,145,56}::One moment please, I need to get the status.::}  {\color[RGB]{255,153,0} } 
+\hayleyBrain{One moment please, I need to get the status.}  {\color[RGB]{255,153,0} } 
 
 Hayley says over the hush radio, ``Agent Parvadi?  Do you need assistance?''
 
@@ -236,7 +231,7 @@ Jaya finally replies, ``Hayley?  If you're still alive, I'm coming to get you.''
 
 {[}\textit{Challenge 1: Notice.  Sent back.}{]}
 
-In Jaya's head she hears  {\color[RGB]{74,134,232}::Ha!::} 
+In Jaya's head she hears \jonahBrain{Ha!} 
 
 
 
@@ -248,7 +243,7 @@ Hayley is coordinating with Lackovich and Javier to get to the Plaza.  She also 
 
 
 
-Hayley, Lackovich and Javier fight their way to the Plaza and join up with Jaya \& Co.  Along the way Hayley gives a report to Carruthers.   {\color[RGB]{230,145,56}::Status report.  No known additional casualties for the teams outside of SAC-04.  Some injuries, nothing incapacitating. I have noted that the combatants appear to be working in teams of 10, with a single organizer or leader for each group.  There is an object that has a bright beam of red light that slices through buildings and causes damage.  We have been killing the enemy combatants with predictable efficiency but their numbers are large.  I have no direct communication with the team inside.::}  {\color[RGB]{255,153,0} } 
+Hayley, Lackovich and Javier fight their way to the Plaza and join up with Jaya \& Co.  Along the way Hayley gives a report to Carruthers.  \hayleyBrain{Status report.  No known additional casualties for the teams outside of SAC-04.  Some injuries, nothing incapacitating. I have noted that the combatants appear to be working in teams of 10, with a single organizer or leader for each group.  There is an object that has a bright beam of red light that slices through buildings and causes damage.  We have been killing the enemy combatants with predictable efficiency but their numbers are large.  I have no direct communication with the team inside.}  {\color[RGB]{255,153,0} } 
 
 Carruthers can tell that this last item distresses Hayley a great deal.
 
@@ -296,7 +291,7 @@ We get backed up to the cave entrance.  Hayley looks around consideringly,  ``Ag
 
 ``Fuck NO!'' yells Jaya.  ``Just shoot more of them!!''
 
-Hayley sighs a little, not really talking to Carruthers but in her head she resigns herself to dying in the cave.  She has already calculated that they don't have enough ammo to hold out for very much longer.  But she obeys orders and does her best to protect Jaya and PG2.  She's not angry about it, she just hopes she can die protecting someone.  \hl{Someone important would be best.}\footnote{\textbf{Rebecca S. }\footnote{$\rightarrow$\textbf{Suko T }She knows the value of her life, she doesn't want to martyr herself for some schmoe. \textsubscript{11/18/14 11:59am}}
+Hayley sighs a little, not really talking to Carruthers but in her head she resigns herself to dying in the cave.  She has already calculated that they don't have enough ammo to hold out for very much longer.  But she obeys orders and does her best to protect Jaya and PG2.  She's not angry about it, she just hopes she can die protecting someone.  \hl{Someone important would be best.}\footnote{\textbf{Rebecca S. }$<$\textbackslash3 \textsubscript{11/18/14}}\footnote{\textbf{Suko T }She knows the value of her life, she doesn't want to martyr herself for some schmoe. \textsubscript{11/18/14 11:59am}}
 
 
 
@@ -415,7 +410,7 @@ Jonah explains, ``We come from another 'world moment'.  A different Praetor.  Th
 
 ``You said the Praetor is tired?
 
-``He has been damaged.  It is beyond repair.  We are very good at repair.  \hl{At memory.}\footnote{\textbf{Suko T }ORLY?  Hmmm... seems to be a lot of not remembering going on... \textsubscript{11/18/14 1:44am}}REBECCAxxBEGINxxFOOTNOTExxREPLYxxNathaniel Ford xxHERExxISxxTHExxFOOTNOTExxWell, there is memory and then there is world-moment memory. \textsubscript{11/18/14 11:31am}}  Very good.''``I'm sorry,'' says Jonah.
+``He has been damaged.  It is beyond repair.  We are very good at repair.  \hl{At memory.}\footnote{\textbf{Suko T }ORLY?  Hmmm... seems to be a lot of not remembering going on... \textsubscript{11/18/14 1:44am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford} Well, there is memory and then there is world-moment memory. \textsubscript{11/18/14 11:31am}}  Very good.''``I'm sorry,'' says Jonah.
 
 ``Did you cause this damage?'' ask the robed man curiously.
 
@@ -580,11 +575,11 @@ Jaya, ``I don't know.''
 
 Hayley taps her head, ``Can you ask him?''
 
-Jaya gives a long suffering sigh but shouts in her head  {\color[RGB]{255,0,0}::Jonah!!::} 
+Jaya gives a long suffering sigh but shouts in her head  \jayaBrain{Jonah!!} 
 
 There's a long pause.  
 
- {\color[RGB]{74,134,232}::Chief can you hear me?  I tried the radio but it didn't work.::} 
+\jonahBrain{Chief can you hear me?  I tried the radio but it didn't work.} 
 
 ``Augh!  Fuck!!'' says Jaya at the mental contact.
 
@@ -592,21 +587,21 @@ There's a long pause.
 
 ``Not dead,'' says Jaya, looking irritated.  Hayley is flooded with relief.
 
- {\color[RGB]{74,134,232}::I have good news and bad news...::} 
+\jonahBrain{I have good news and bad news...} 
 
 ``Bad news??'' repeats Jaya out loud.
 
 Hayley's freaking out.  ``What?  What??  Bad news???''  Carruthers can tell that Hayley's more frantic now than she was when facing certain death by zombie.
 
- {\color[RGB]{74,134,232}::The good news is the mission was a success.  We can go home.::} 
+\jonahBrain{The good news is the mission was a success.  We can go home.} 
 
 ``The mission was a fucking success!!'' says Jaya loudly.  ``Please tell me Drake bought it on the way down.  Please come on, I just need something to go right,'' says Jaya out loud.  Rust raises an eyebrow.
 
- {\color[RGB]{74,134,232}::Take a deep breath Chief.::} 
+\jonahBrain{Take a deep breath Chief.} 
 
 ``Is there gas?'' says Jaya in panic.
 
- {\color[RGB]{74,134,232}::Wait did the fighting stop?  It should have stopped.  Wait wait, are you alright?::} 
+\jonahBrain{Wait did the fighting stop?  It should have stopped.  Wait wait, are you alright?} 
 
 There's another feedback loop of panic.
 
@@ -614,7 +609,7 @@ There's another feedback loop of panic.
 
 ``Jonah just said there's something bad gonna happen.''
 
- {\color[RGB]{74,134,232}::No, no.  It's not bad for the team.  But.... you're all alive. Can you confirm please?::} 
+\jonahBrain{No, no.  It's not bad for the team.  But.... you're all alive. Can you confirm please?} 
 
 ``Yes!  Please just fucking tell me!!'' yells Jaya, eyes wide as she stares about the cave, struggling with the concept of focusing inward.
 
@@ -622,7 +617,7 @@ There's another feedback loop of panic.
 
 Lackovich grips Jaya's shoulders and drags her a bit away, hissing through clenched teeth, ``You need to get your fucking shit together!''
 
- {\color[RGB]{74,134,232}::Chief!  Calm down.  The mission was a success.  We have what we need.  The fighting should have stopped.  We're coming out.::} 
+\jonahBrain{Chief!  Calm down.  The mission was a success.  We have what we need.  The fighting should have stopped.  We're coming out.} 
 
 ``They're coming out,'' whispers Jaya.  ``Jonah's alive.''  Hayley lets out a huge breath of relief and sits down abruptly, almost fainting.  Jaya continues, ``Everyone's alive.''  she repeats it louder for everyone else, ``Everyone's alive!!''
 
@@ -749,23 +744,23 @@ After an hour or so, Jonah can tell that we're all tired and particularly Hayley
 
 After about 30 minutes of rest, Hayley has the odd sensation of being mentally shaken awake.
 
- {\color[RGB]{153,0,255}::Hey!  Hey!  Wake up:: } There is a feeling of barely suppressed panic from Carruthers.  {\color[RGB]{153,0,255}::I need   to } \textless brief signal loss\textgreater  {\color[RGB]{153,0,255}  talk to you.  Can you guys get back any faster?:: } 
+ \carBrain{Hey!  Hey!  Wake up } There is a feeling of barely suppressed panic from Carruthers.  \carBrain{I need   to } \textless brief signal loss\textgreater  \carBrain{  talk to you.  Can you guys get back any faster? } 
 
 Hayley is still groggy and half asleep but she starts making some mental calculations
 
- {\color[RGB]{230,145,56}::Yes.::}  {\color[RGB]{255,153,0} } 
+\hayleyBrain{Yes.}  {\color[RGB]{255,153,0} } 
 
- {\color[RGB]{153,0,255}::Really we just need Jonah.  They realize you are tired and everything.... Not if it's going to  compromise safety.:: } 
+ \carBrain{Really we just need Jonah.  They realize you are tired and everything.... Not if it's going to  compromise safety. } 
 
-Hayley does a quick personal health check  {\color[RGB]{230,145,56}::No I can do it.  I'll probably collapse afterward though.::}  {\color[RGB]{255,153,0} } 
+Hayley does a quick personal health check \hayleyBrain{No I can do it.  I'll probably collapse afterward though.}  {\color[RGB]{255,153,0} } 
 
- {\color[RGB]{153,0,255}::Um... okay.  Morgan says anytime you can make is good but don't hurt yourselves.  We need you all back.:: } 
+ \carBrain{Um... okay.  Morgan says anytime you can make is good but don't hurt yourselves.  We need you all back. } 
 
- {\color[RGB]{230,145,56}::What if we collapse when we get to the train or SAC-09?  What state of unwellness is acceptable?::}  {\color[RGB]{255,153,0} } 
+\hayleyBrain{What if we collapse when we get to the train or SAC-09?  What state of unwellness is acceptable?}  {\color[RGB]{255,153,0} } 
 
- {\color[RGB]{153,0,255}::Uh, hold on... They're going to need Jonah awake... I guess....Um...:: } 
+ \carBrain{Uh, hold on... They're going to need Jonah awake... I guess....Um... } 
 
- {\color[RGB]{230,145,56}::But the rest of us don't?  Understood.  Oh, I haven't opened my eyes yet.::}  {\color[RGB]{255,153,0} } 
+\hayleyBrain{But the rest of us don't?  Understood.  Oh, I haven't opened my eyes yet.}  {\color[RGB]{255,153,0} } 
 
 Hayley's eyes pop open and she takes a deep breath and sits up.
 
@@ -791,7 +786,7 @@ Jonah sits up suddenly and pulls out his gun in alarm.
 
 Jonah swats Jaya's hands away, crankily.   ``Is that part of the order?  Some amount of physical damage is acceptable?'' Jonah asks Hayley.
 
- {\color[RGB]{153,0,255}::Don't hurt yourselves.:: } 
+ \carBrain{Don't hurt yourselves. } 
 
 ``The advice is that we shouldn't hurt ourselves but that you were the priority.''
 
@@ -847,15 +842,15 @@ Jaya's eye twitches at hearing that but she says nothing and just strides onto t
 
 
 
-As the train starts off, Jonah thinks at Jaya  {\color[RGB]{74,134,232}::Chief, before we give the status report, do you want to know what happened?  Yes or no?::} 
+As the train starts off, Jonah thinks at Jaya \jonahBrain{Chief, before we give the status report, do you want to know what happened?  Yes or no?} 
 
 ``Fuck!  FUCK!!'' She walks up to Jonah and puts her hands on his shoulders.  ``Okay.  When we're in the same fucking space, surrounded by our fucking dudes, \textit{use your mouth}.''
 
- {\color[RGB]{74,134,232}::You may not want everyone to hear this.::} 
+\jonahBrain{You may not want everyone to hear this.} 
 
 Jaya slaps Jonah, ``Fucking cut it out!  Jesus.'' she stalks off to pace around the train.
 
- {\color[RGB]{74,134,232}::I'll take that as a no.::} 
+\jonahBrain{I'll take that as a no.} 
 
 
 
